themes/codi-ng/static/css/style.css
body {
  padding: 0
}

/* Push content out from under the sticky header */
@media (min-width: 0px) {
  .content {
    margin-top: 8rem;
  }
}

@media (min-width: 414px) {
  .content {
    margin-top: 8rem;
  }
}

@media (min-width: 480px) {
  .content {
    margin-top: 7rem;
  }
}

@media (min-width: 640px) {
  .content {
    margin-top: 7rem;
  }
}

.end-of-section {
  margin-bottom: 1rem;
}

.author {
  border: 1px solid gray;
  border-style: dotted;
  padding: 1rem;
}

article {
  font-family: Merriweather;
  line-height: 1.8;
  color: #222222;
  font-size: 1.2em;
}

/* Aligns the tag icon with the tag badges */
.list-tag {
  top: 0.15em;
  position: relative;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  font-family: PT Sans;
  font-weight: 700;
  color: #222;
}

.dot:after {
  content: "\00B7";
  margin-left: 3px;
  margin-right: 3px;
}

a.no-style:link {
  text-decoration: inherit;
  color: inherit;
  cursor: pointer;
}

a.no-style:visited {
  text-decoration: inherit;
  color: inherit;
  cursor: pointer;
}

.inline-svg {
  display: inline-block;
  height: 1.15rem;
  width: 1.15rem;
  top: 0.15rem;
  position: relative;
}

.inline-svg  > svg {
  vertical-align: baseline !important;
}

.nav-container {
  padding: 0px;
  background-color: white;
  color: #555;
  font-weight: 700;
  text-transform: uppercase;
  opacity: 0.95;
}

.nav {
  height: 65px;
  box-shadow: 0 0 8px 8px rgba(0,0,0,7%);
  align-items: center;
  justify-content: center;
}

.socials {
  line-height: 1.8;
  font-size: 1rem;
  display: flex; /* or inline-flex */
  flex-direction: row;
  justify-content: space-evenly;
  cursor: pointer;
  align-items: baseline;
  border-bottom: 1px solid gray;
  color: white;
  background: rgb(63,61,194);
  background: linear-gradient(90deg, rgba(63,61,194,1) 0%, rgba(102,100,206,1) 50%);
}

.highlight > div {
  display: inline-block;
  padding: 1em 1em 1em 1em;
  box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
  border-radius: 7px;
  border: 2px solid black;
  width: 100%;
}

